--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- NAVBAR START-->
     <nav class="navbar navbar-expand-lg">
         <img class="logo" src="./media/images/tiger1.jpg" alt="Logo">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" alt="nav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" name="nav">
             <span class="navbar-toggler-icon"></span>
             </button>
         <div class="container-fluid">
@@ -53,22 +53,16 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./media/images/autoestima.jpg" class="d-block w-100" alt="autoestima">
+                <img src="./media/images/carrousel1.jpg" class="d-block w-100" alt="defensa">
             </div>
             <div class="carousel-item">
-                <img src="./media/images/comunicacion.jpg" class="d-block w-100" alt="comunicacion">
+                <img src="./media/images/carrousel2.jpg" class="d-block w-100" alt="katana">
             </div>
             <div class="carousel-item">
-                <img src="./media/images/Confianza.png" class="d-block w-100" alt="Confianza">
+                <img src="./media/images/carrousel3.jpg" class="d-block w-100" alt="palo">
             </div>
             <div class="carousel-item">
-                <img src="./media/images/honestidad.png" class="d-block w-100" alt="honestidad">
-            </div>
-            <div class="carousel-item">
-                <img src="./media/images/disciplina.png" class="d-block w-100" alt="disciplina">
-            </div>
-            <div class="carousel-item">
-                <img src="./media/images/respeto.png" class="d-block w-100" alt="respeto">
+                <img src="./media/images/carrousel4.jpg" class="d-block w-100" alt="palolargo">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -86,9 +80,9 @@
         <footer class="footer">
             <div class="container">
                 <div class="social-media">
-                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram" name="instagram"></i></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square" name="facebook"></i></a>
-                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube" name="youtube"></i></a>
+                    <a name="instagram" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a name="facebook" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a name="youtube" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="text-center text-white">
