--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <img class="logo" src="../media/images/tiger1.jpg" alt="Logo">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar"  alt="nav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar"  name="nav">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -58,9 +58,9 @@
         <footer class="footer">
             <div class="container">
                 <div class="social-media">
-                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram" name="instagram"></i></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square" name="facebook"></i></a>
-                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube" name="youtube"></i></a>
+                    <a name="instagram" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a name="facebook" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a name="youtube" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="text-center text-white p-3">
